--- a/app/src/main/res/layout/post_layout.xml
+++ b/app/src/main/res/layout/post_layout.xml
@@ -13,12 +13,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:cardCornerRadius="10dp">
+        app:cardCornerRadius="15dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/gray_2">
+            android:layout_height="wrap_content">
 
             <RelativeLayout
                 android:id="@+id/postDet_relativeLayout"
@@ -37,7 +36,7 @@
                     android:scaleType="fitCenter"
                     app:civ_border="true"
                     app:civ_border_width="4dp"
-                    app:civ_border_color="@android:color/holo_blue_light"/>
+                    app:civ_border_color="@android:color/holo_red_light"/>
 
                 <TextView
                     android:id="@+id/postUsername_textView"
@@ -55,7 +54,7 @@
                     android:layout_marginLeft="12dp"
                     android:layout_marginTop="8dp"
                     android:text="Name"
-                    android:textColor="@color/white"
+                    android:textColor="?android:attr/textColorPrimary"
                     android:layout_toRightOf="@id/postUserPhoto_imageView"
                     android:layout_below="@id/postUsername_textView"/>
 
@@ -66,7 +65,7 @@
                     android:layout_marginLeft="12dp"
                     android:text="•"
                     android:textSize="28dp"
-                    android:textColor="@color/green_700"
+                    android:textColor="@color/yellow"
                     android:layout_toRightOf="@id/postPersonName_textView"
                     android:layout_below="@id/postUsername_textView"/>
 
@@ -77,7 +76,7 @@
                     android:layout_marginLeft="12dp"
                     android:layout_marginTop="10dp"
                     android:text="12:45 PM"
-                    android:textColor="@color/green_700"
+                    android:textColor="@color/yellow"
                     android:textStyle="bold"
                     android:layout_toRightOf="@id/dot_tV"
                     android:layout_below="@id/postUsername_textView"/>
@@ -133,7 +132,7 @@
                         android:layout_height="wrap_content"
                         android:text="0"
                         android:textAlignment="center"
-                        android:textColor="@color/gray_3"
+                        android:textColor="?android:attr/textColorPrimary"
                         android:textSize="11sp" />
 
                 </LinearLayout>
@@ -159,7 +158,7 @@
                         android:layout_height="wrap_content"
                         android:text="0"
                         android:textAlignment="center"
-                        android:textColor="@color/gray_3"
+                        android:textColor="?android:attr/textColorPrimary"
                         android:textSize="11sp" />
                 </LinearLayout>
 
@@ -171,7 +170,7 @@
                     android:layout_below="@id/like_linearLayout"
                     android:layout_marginTop="8dp"
                     android:text="Sample post title"
-                    android:textColor="@color/white"
+                    android:textColor="?android:attr/textColorPrimary"
                     android:textSize="14sp"
                     android:textStyle="bold" />
 
@@ -182,7 +181,7 @@
                     android:layout_below="@id/postTitle_textView"
                     android:layout_marginTop="8dp"
                     android:text="Lorem ipsum sample text Lorem ipsum sample text"
-                    android:textColor="@color/white" />
+                    android:textColor="?android:attr/textColorPrimary" />
             </RelativeLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
