--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -111,6 +111,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Invalid"
+                        android:clickable="true"
                         android:textAlignment="center"
                         android:textColor="?android:attr/textColorPrimary"
                         android:textSize="24sp"
@@ -140,6 +141,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Invalid"
+                        android:clickable="true"
                         android:textAlignment="center"
                         android:textColor="?android:attr/textColorPrimary"
                         android:textSize="24sp"
